<resources>
    <string name="app_name">Flick</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="text_videos">Videos:</string>
    <string name="text_more">More</string>
    <string name="text_less">Less</string>
    <string name="Rating">By Rating</string>
    <string name="Popularity">By Popularity</string>
    <string name="Now_Playing">Now Playing</string>
    <string name="Revenue">By Revenue</string>
    <string name="Favorites">Favorites</string>
    <string name="budget">Budget :</string>
    <string name="original_language">Original Language :</string>
    <string name="genres">Genres :</string>
    <string name="runtime">Runtime (Minutes) :</string>
    <string name="production_companies">Production Companies :</string>
    <string name="revenue">Revenue :</string>
    <string name="tagline">Tagline :</string>
    <string name="homepage">Website :</string>
 </resources>
